style.css
  /* Center contents of the body */

.center{
    height: 400px;
    width: 800px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin:0 auto;
}
.btn {
    background-color:blue;
    color: white;
}
#timer{
        position:absolute;
        top:0;
        right:0;
        font-size: 15px;
    }
#highscores {
    position: fixed;
    top:0;
    left:0;
}


/* .boxcolor { 
    width: 100%;
    height: 50px;
    padding: 1px;
    margin: 5px;
    display:flex;
    align-items: center;
    justify-content:center;
    background-color: blue;
 */

